--- a/package.json
+++ b/package.json
@@ -34,8 +34,14 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "jest-extended": "^3.2.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./setup-jest.js"
+    ]
   }
 }
